Initial version of recommender website

--- a/Recommenders/02_ItemBased_Recommenders.ipynb
+++ b/Recommenders/02_ItemBased_Recommenders.ipynb
@@ -782,6 +782,7 @@
     "        )\n",
     "        \n",
     "    elif criteria == \"bayes_average\":\n",
+    "        # TODO: implement it \n",
     "        pass\n",
     "        \n",
     "    return final_table"
