remove APi usage

--- a/jackify_test.ipynb
+++ b/jackify_test.ipynb
@@ -29,6 +29,135 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>movieId</th>\n",
+       "      <th>imdbId</th>\n",
+       "      <th>tmdbId</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>114709</td>\n",
+       "      <td>862.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>113497</td>\n",
+       "      <td>8844.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>113228</td>\n",
+       "      <td>15602.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>114885</td>\n",
+       "      <td>31357.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>113041</td>\n",
+       "      <td>11862.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9737</th>\n",
+       "      <td>193581</td>\n",
+       "      <td>5476944</td>\n",
+       "      <td>432131.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9738</th>\n",
+       "      <td>193583</td>\n",
+       "      <td>5914996</td>\n",
+       "      <td>445030.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9739</th>\n",
+       "      <td>193585</td>\n",
+       "      <td>6397426</td>\n",
+       "      <td>479308.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9740</th>\n",
+       "      <td>193587</td>\n",
+       "      <td>8391976</td>\n",
+       "      <td>483455.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9741</th>\n",
+       "      <td>193609</td>\n",
+       "      <td>101726</td>\n",
+       "      <td>37891.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9742 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      movieId   imdbId    tmdbId\n",
+       "0           1   114709     862.0\n",
+       "1           2   113497    8844.0\n",
+       "2           3   113228   15602.0\n",
+       "3           4   114885   31357.0\n",
+       "4           5   113041   11862.0\n",
+       "...       ...      ...       ...\n",
+       "9737   193581  5476944  432131.0\n",
+       "9738   193583  5914996  445030.0\n",
+       "9739   193585  6397426  479308.0\n",
+       "9740   193587  8391976  483455.0\n",
+       "9741   193609   101726   37891.0\n",
+       "\n",
+       "[9742 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "links_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [
@@ -534,32 +663,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_temp = top_movies_list.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    <a href=https://www.imdb.com/title/tt0109830>F...\n",
-       "1    <a href=https://www.imdb.com/title/tt0169547>A...\n",
-       "2    <a href=https://www.imdb.com/title/tt0126029>S...\n",
-       "3    <a href=https://www.imdb.com/title/tt0111503>T...\n",
-       "4    <a href=https://www.imdb.com/title/tt0111257>S...\n",
-       "5    <a href=https://www.imdb.com/title/tt0093779>P...\n",
-       "6    <a href=https://www.imdb.com/title/tt0119217>G...\n",
-       "7    <a href=https://www.imdb.com/title/tt0107048>G...\n",
-       "8    <a href=https://www.imdb.com/title/tt0101414>B...\n",
-       "9    <a href=https://www.imdb.com/title/tt0338013>E...\n",
-       "dtype: object"
+       "'https://www.imdb.com/title/tt0114709'"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top_movies_list.apply(lambda x: f'<a href=\"{construct_imdb_url(x.movieId)}\">{x.title}</a>',axis=1)"
+    "construct_imdb_url(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style type=\"text/css\">\n",
+       "</style>\n",
+       "<table id=\"T_6d45d\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th class=\"blank level0\" >&nbsp;</th>\n",
+       "      <th id=\"T_6d45d_level0_col0\" class=\"col_heading level0 col0\" >title</th>\n",
+       "      <th id=\"T_6d45d_level0_col1\" class=\"col_heading level0 col1\" >genres</th>\n",
+       "      <th id=\"T_6d45d_level0_col2\" class=\"col_heading level0 col2\" >movieId</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th id=\"T_6d45d_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_6d45d_row0_col0\" class=\"data row0 col0\" ><a href=\"https://www.imdb.com/title/tt0109830\">Forrest Gump (1994)</a></td>\n",
+       "      <td id=\"T_6d45d_row0_col1\" class=\"data row0 col1\" >Comedy|Drama|Romance|War</td>\n",
+       "      <td id=\"T_6d45d_row0_col2\" class=\"data row0 col2\" >356</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_6d45d_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_6d45d_row1_col0\" class=\"data row1 col0\" ><a href=\"https://www.imdb.com/title/tt0169547\">American Beauty (1999)</a></td>\n",
+       "      <td id=\"T_6d45d_row1_col1\" class=\"data row1 col1\" >Drama|Romance</td>\n",
+       "      <td id=\"T_6d45d_row1_col2\" class=\"data row1 col2\" >2858</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_6d45d_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+       "      <td id=\"T_6d45d_row2_col0\" class=\"data row2 col0\" ><a href=\"https://www.imdb.com/title/tt0126029\">Shrek (2001)</a></td>\n",
+       "      <td id=\"T_6d45d_row2_col1\" class=\"data row2 col1\" >Adventure|Animation|Children|Comedy|Fantasy|Romance</td>\n",
+       "      <td id=\"T_6d45d_row2_col2\" class=\"data row2 col2\" >4306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_6d45d_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
+       "      <td id=\"T_6d45d_row3_col0\" class=\"data row3 col0\" ><a href=\"https://www.imdb.com/title/tt0111503\">True Lies (1994)</a></td>\n",
+       "      <td id=\"T_6d45d_row3_col1\" class=\"data row3 col1\" >Action|Adventure|Comedy|Romance|Thriller</td>\n",
+       "      <td id=\"T_6d45d_row3_col2\" class=\"data row3 col2\" >380</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_6d45d_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
+       "      <td id=\"T_6d45d_row4_col0\" class=\"data row4 col0\" ><a href=\"https://www.imdb.com/title/tt0111257\">Speed (1994)</a></td>\n",
+       "      <td id=\"T_6d45d_row4_col1\" class=\"data row4 col1\" >Action|Romance|Thriller</td>\n",
+       "      <td id=\"T_6d45d_row4_col2\" class=\"data row4 col2\" >377</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_6d45d_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
+       "      <td id=\"T_6d45d_row5_col0\" class=\"data row5 col0\" ><a href=\"https://www.imdb.com/title/tt0093779\">Princess Bride, The (1987)</a></td>\n",
+       "      <td id=\"T_6d45d_row5_col1\" class=\"data row5 col1\" >Action|Adventure|Comedy|Fantasy|Romance</td>\n",
+       "      <td id=\"T_6d45d_row5_col2\" class=\"data row5 col2\" >1197</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_6d45d_level0_row6\" class=\"row_heading level0 row6\" >6</th>\n",
+       "      <td id=\"T_6d45d_row6_col0\" class=\"data row6 col0\" ><a href=\"https://www.imdb.com/title/tt0119217\">Good Will Hunting (1997)</a></td>\n",
+       "      <td id=\"T_6d45d_row6_col1\" class=\"data row6 col1\" >Drama|Romance</td>\n",
+       "      <td id=\"T_6d45d_row6_col2\" class=\"data row6 col2\" >1704</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_6d45d_level0_row7\" class=\"row_heading level0 row7\" >7</th>\n",
+       "      <td id=\"T_6d45d_row7_col0\" class=\"data row7 col0\" ><a href=\"https://www.imdb.com/title/tt0107048\">Groundhog Day (1993)</a></td>\n",
+       "      <td id=\"T_6d45d_row7_col1\" class=\"data row7 col1\" >Comedy|Fantasy|Romance</td>\n",
+       "      <td id=\"T_6d45d_row7_col2\" class=\"data row7 col2\" >1265</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_6d45d_level0_row8\" class=\"row_heading level0 row8\" >8</th>\n",
+       "      <td id=\"T_6d45d_row8_col0\" class=\"data row8 col0\" ><a href=\"https://www.imdb.com/title/tt0101414\">Beauty and the Beast (1991)</a></td>\n",
+       "      <td id=\"T_6d45d_row8_col1\" class=\"data row8 col1\" >Animation|Children|Fantasy|Musical|Romance|IMAX</td>\n",
+       "      <td id=\"T_6d45d_row8_col2\" class=\"data row8 col2\" >595</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_6d45d_level0_row9\" class=\"row_heading level0 row9\" >9</th>\n",
+       "      <td id=\"T_6d45d_row9_col0\" class=\"data row9 col0\" ><a href=\"https://www.imdb.com/title/tt0338013\">Eternal Sunshine of the Spotless Mind (2004)</a></td>\n",
+       "      <td id=\"T_6d45d_row9_col1\" class=\"data row9 col1\" >Drama|Romance|Sci-Fi</td>\n",
+       "      <td id=\"T_6d45d_row9_col2\" class=\"data row9 col2\" >7361</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x1526e6fb2b0>"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_temp.title=list_temp.apply(lambda x: f'<a href=\"{construct_imdb_url(x.movieId)}\">{x.title}</a>',axis=1)\n",
+    "list_temp.style.format()\n"
    ]
   },
   {
@@ -985,22 +1210,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import requests\n",
-    "\n",
-    "url = \"https://movie-database-alternative.p.rapidapi.com/\"\n",
-    "\n",
-    "querystring = {\"s\":\"Avengers Endgame\",\"r\":\"json\",\"page\":\"1\"}\n",
-    "\n",
-    "headers = {\n",
-    "\t\"X-RapidAPI-Key\": \"6e1ffce180msh4d76e2403995450p1c3c5bjsn7bc3b9dc3be1\",\n",
-    "\t\"X-RapidAPI-Host\": \"movie-database-alternative.p.rapidapi.com\"\n",
-    "}\n",
-    "\n",
-    "response = requests.request(\"GET\", url, headers=headers, params=querystring)\n",
-    "\n",
-    "print(response.text)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
