sff user_based recommender iterface

--- a/Recommenders/02_ItemBased_Recommenders.ipynb
+++ b/Recommenders/02_ItemBased_Recommenders.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -149,19 +149,19 @@
        "[9742 rows x 3 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "links_df= pd.read_csv(\"datasets\\ml-latest-small\\links.csv\")\n",
+    "links_df= pd.read_csv(\"..\\datasets\\ml-latest-small\\links.csv\")\n",
     "links_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -292,19 +292,19 @@
        "[9742 rows x 3 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "movies_df= pd.read_csv(\"datasets\\ml-latest-small\\movies.csv\")\n",
+    "movies_df= pd.read_csv(\"..\\datasets\\ml-latest-small\\movies.csv\")\n",
     "movies_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -434,19 +434,19 @@
        "[100836 rows x 4 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ratings_df= pd.read_csv(\"datasets\\ml-latest-small\\\\ratings.csv\")\n",
+    "ratings_df= pd.read_csv(\"..\\datasets\\ml-latest-small\\\\ratings.csv\")\n",
     "ratings_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -576,13 +576,13 @@
        "[3683 rows x 4 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tags_df= pd.read_csv(\"datasets\\ml-latest-small\\\\tags.csv\")\n",
+    "tags_df= pd.read_csv(\"..\\datasets\\ml-latest-small\\\\tags.csv\")\n",
     "tags_df"
    ]
   },
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +737,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>movieId</th>\n",
+       "      <th>title</th>\n",
+       "      <th>genres</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7656</th>\n",
+       "      <td>88448</td>\n",
+       "      <td>Paper Birds (Pájaros de papel) (2010)</td>\n",
+       "      <td>Comedy|Drama</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      movieId                                  title        genres\n",
+       "7656    88448  Paper Birds (Pájaros de papel) (2010)  Comedy|Drama"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies_df.query(\"movieId == 88448\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,99 +846,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>title</th>\n",
-       "      <th>genres</th>\n",
-       "      <th>cross_corr</th>\n",
-       "      <th>rate_count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1680</th>\n",
-       "      <td>Toy Story 2 (1999)</td>\n",
-       "      <td>Adventure|Animation|Children|Comedy|Fantasy</td>\n",
-       "      <td>0.699211</td>\n",
-       "      <td>97</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1470</th>\n",
-       "      <td>Arachnophobia (1990)</td>\n",
-       "      <td>Comedy|Horror</td>\n",
-       "      <td>0.652424</td>\n",
-       "      <td>53</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3213</th>\n",
-       "      <td>Incredibles, The (2004)</td>\n",
-       "      <td>Action|Adventure|Animation|Children|Comedy</td>\n",
-       "      <td>0.643301</td>\n",
-       "      <td>125</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2783</th>\n",
-       "      <td>Finding Nemo (2003)</td>\n",
-       "      <td>Adventure|Animation|Children|Comedy</td>\n",
-       "      <td>0.618701</td>\n",
-       "      <td>141</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>372</th>\n",
-       "      <td>Aladdin (1992)</td>\n",
-       "      <td>Adventure|Animation|Children|Comedy|Musical</td>\n",
-       "      <td>0.611892</td>\n",
-       "      <td>183</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                        title                                       genres  \\\n",
-       "1680       Toy Story 2 (1999)  Adventure|Animation|Children|Comedy|Fantasy   \n",
-       "1470     Arachnophobia (1990)                                Comedy|Horror   \n",
-       "3213  Incredibles, The (2004)   Action|Adventure|Animation|Children|Comedy   \n",
-       "2783      Finding Nemo (2003)          Adventure|Animation|Children|Comedy   \n",
-       "372            Aladdin (1992)  Adventure|Animation|Children|Comedy|Musical   \n",
-       "\n",
-       "      cross_corr  rate_count  \n",
-       "1680    0.699211          97  \n",
-       "1470    0.652424          53  \n",
-       "3213    0.643301         125  \n",
-       "2783    0.618701         141  \n",
-       "372     0.611892         183  "
-      ]
-     },
-     "execution_count": 84,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "148647",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[1;32mc:\\Python39\\lib\\site-packages\\pandas\\core\\indexes\\base.py:3629\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   3628\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m-> 3629\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_engine\u001b[39m.\u001b[39;49mget_loc(casted_key)\n\u001b[0;32m   3630\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n",
+      "File \u001b[1;32mc:\\Python39\\lib\\site-packages\\pandas\\_libs\\index.pyx:136\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mc:\\Python39\\lib\\site-packages\\pandas\\_libs\\index.pyx:163\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi:2131\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.Int64HashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi:2140\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.Int64HashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 148647",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32md:\\_1_Technicals\\DataScience_Bootcamp\\W_10\\ML_RecommederSys\\Recommenders\\02_ItemBased_Recommenders.ipynb Cell 11\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/_1_Technicals/DataScience_Bootcamp/W_10/ML_RecommederSys/Recommenders/02_ItemBased_Recommenders.ipynb#X13sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m recommend_similar_movies(\u001b[39m5\u001b[39;49m,\u001b[39m148647\u001b[39;49m,\u001b[39m\"\u001b[39;49m\u001b[39m50_plus_rate_count\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
+      "\u001b[1;32md:\\_1_Technicals\\DataScience_Bootcamp\\W_10\\ML_RecommederSys\\Recommenders\\02_ItemBased_Recommenders.ipynb Cell 11\u001b[0m in \u001b[0;36mrecommend_similar_movies\u001b[1;34m(n, chosen_movie_id, criteria)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/_1_Technicals/DataScience_Bootcamp/W_10/ML_RecommederSys/Recommenders/02_ItemBased_Recommenders.ipynb#X13sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m cross_table \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mpivot_table(data\u001b[39m=\u001b[39mratings_df, values\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mrating\u001b[39m\u001b[39m\"\u001b[39m,columns\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mmovieId\u001b[39m\u001b[39m\"\u001b[39m,index\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39muserId\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/_1_Technicals/DataScience_Bootcamp/W_10/ML_RecommederSys/Recommenders/02_ItemBased_Recommenders.ipynb#X13sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m corr_table\u001b[39m=\u001b[39mpd\u001b[39m.\u001b[39mDataFrame({})\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/_1_Technicals/DataScience_Bootcamp/W_10/ML_RecommederSys/Recommenders/02_ItemBased_Recommenders.ipynb#X13sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m corr_table[\u001b[39m\"\u001b[39m\u001b[39mcross_corr\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m cross_table\u001b[39m.\u001b[39mcorrwith(cross_table[chosen_movie_id])\u001b[39m.\u001b[39mdropna()\u001b[39m.\u001b[39mdrop(chosen_movie_id)\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/_1_Technicals/DataScience_Bootcamp/W_10/ML_RecommederSys/Recommenders/02_ItemBased_Recommenders.ipynb#X13sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39m#print(corr_table)\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/_1_Technicals/DataScience_Bootcamp/W_10/ML_RecommederSys/Recommenders/02_ItemBased_Recommenders.ipynb#X13sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m corr_table_view \u001b[39m=\u001b[39m corr_table\u001b[39m.\u001b[39mmerge(movies_df,on\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mmovieId\u001b[39m\u001b[39m\"\u001b[39m)[[\u001b[39m\"\u001b[39m\u001b[39mtitle\u001b[39m\u001b[39m\"\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39mgenres\u001b[39m\u001b[39m\"\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39mcross_corr\u001b[39m\u001b[39m\"\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39mmovieId\u001b[39m\u001b[39m\"\u001b[39m]]\n",
+      "File \u001b[1;32mc:\\Python39\\lib\\site-packages\\pandas\\core\\frame.py:3505\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3503\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcolumns\u001b[39m.\u001b[39mnlevels \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[0;32m   3504\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_getitem_multilevel(key)\n\u001b[1;32m-> 3505\u001b[0m indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcolumns\u001b[39m.\u001b[39;49mget_loc(key)\n\u001b[0;32m   3506\u001b[0m \u001b[39mif\u001b[39;00m is_integer(indexer):\n\u001b[0;32m   3507\u001b[0m     indexer \u001b[39m=\u001b[39m [indexer]\n",
+      "File \u001b[1;32mc:\\Python39\\lib\\site-packages\\pandas\\core\\indexes\\base.py:3631\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   3629\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_engine\u001b[39m.\u001b[39mget_loc(casted_key)\n\u001b[0;32m   3630\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n\u001b[1;32m-> 3631\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key) \u001b[39mfrom\u001b[39;00m \u001b[39merr\u001b[39;00m\n\u001b[0;32m   3632\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mTypeError\u001b[39;00m:\n\u001b[0;32m   3633\u001b[0m     \u001b[39m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3634\u001b[0m     \u001b[39m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3635\u001b[0m     \u001b[39m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3636\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_check_indexing_error(key)\n",
+      "\u001b[1;31mKeyError\u001b[0m: 148647"
+     ]
     }
    ],
    "source": [
-    "recommend_similar_movies(5,1,\"50_plus_rate_count\")"
+    "recommend_similar_movies(5,148647,\"50_plus_rate_count\")"
    ]
   },
   {
