--- a/Recommenders/01_BasicRecommenders.ipynb
+++ b/Recommenders/01_BasicRecommenders.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -140,19 +140,19 @@
        "[9742 rows x 3 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "links_df= pd.read_csv(\"datasets\\ml-latest-small\\links.csv\")\n",
+    "links_df= pd.read_csv(\"..\\datasets\\ml-latest-small\\links.csv\")\n",
     "links_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -283,19 +283,19 @@
        "[9742 rows x 3 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "movies_df= pd.read_csv(\"datasets\\ml-latest-small\\movies.csv\")\n",
+    "movies_df= pd.read_csv(\"..\\datasets\\ml-latest-small\\movies.csv\")\n",
     "movies_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -425,19 +425,19 @@
        "[100836 rows x 4 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ratings_df= pd.read_csv(\"datasets\\ml-latest-small\\\\ratings.csv\")\n",
+    "ratings_df= pd.read_csv(\"..\\datasets\\ml-latest-small\\\\ratings.csv\")\n",
     "ratings_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -567,13 +567,13 @@
        "[3683 rows x 4 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tags_df= pd.read_csv(\"datasets\\ml-latest-small\\\\tags.csv\")\n",
+    "tags_df= pd.read_csv(\"..\\datasets\\ml-latest-small\\\\tags.csv\")\n",
     "tags_df"
    ]
   },
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -782,34 +782,34 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Toy Story (1995)</td>\n",
-       "      <td>Adventure|Animation|Children|Comedy|Fantasy</td>\n",
-       "      <td>215</td>\n",
+       "      <th>314</th>\n",
+       "      <td>Forrest Gump (1994)</td>\n",
+       "      <td>Comedy|Drama|Romance|War</td>\n",
+       "      <td>329</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Jumanji (1995)</td>\n",
-       "      <td>Adventure|Children|Fantasy</td>\n",
-       "      <td>110</td>\n",
+       "      <th>277</th>\n",
+       "      <td>Shawshank Redemption, The (1994)</td>\n",
+       "      <td>Crime|Drama</td>\n",
+       "      <td>317</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Grumpier Old Men (1995)</td>\n",
-       "      <td>Comedy|Romance</td>\n",
-       "      <td>52</td>\n",
+       "      <th>257</th>\n",
+       "      <td>Pulp Fiction (1994)</td>\n",
+       "      <td>Comedy|Crime|Drama|Thriller</td>\n",
+       "      <td>307</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Waiting to Exhale (1995)</td>\n",
-       "      <td>Comedy|Drama|Romance</td>\n",
-       "      <td>7</td>\n",
+       "      <th>510</th>\n",
+       "      <td>Silence of the Lambs, The (1991)</td>\n",
+       "      <td>Crime|Horror|Thriller</td>\n",
+       "      <td>279</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Father of the Bride Part II (1995)</td>\n",
-       "      <td>Comedy</td>\n",
-       "      <td>49</td>\n",
+       "      <th>1938</th>\n",
+       "      <td>Matrix, The (1999)</td>\n",
+       "      <td>Action|Sci-Fi|Thriller</td>\n",
+       "      <td>278</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -818,27 +818,27 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9719</th>\n",
-       "      <td>Black Butler: Book of the Atlantic (2017)</td>\n",
-       "      <td>Action|Animation|Comedy|Fantasy</td>\n",
+       "      <th>3053</th>\n",
+       "      <td>Cop (1988)</td>\n",
+       "      <td>Thriller</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9720</th>\n",
-       "      <td>No Game No Life: Zero (2017)</td>\n",
-       "      <td>Animation|Comedy|Fantasy</td>\n",
+       "      <th>3049</th>\n",
+       "      <td>Born in East L.A. (1987)</td>\n",
+       "      <td>Comedy</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9721</th>\n",
-       "      <td>Flint (2017)</td>\n",
+       "      <th>6687</th>\n",
+       "      <td>City of Men (Cidade dos Homens) (2007)</td>\n",
        "      <td>Drama</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9722</th>\n",
-       "      <td>Bungo Stray Dogs: Dead Apple (2018)</td>\n",
-       "      <td>Action|Animation</td>\n",
+       "      <th>3045</th>\n",
+       "      <td>Best Seller (1987)</td>\n",
+       "      <td>Thriller</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -853,36 +853,36 @@
        "</div>"
       ],
       "text/plain": [
-       "                                          title  \\\n",
-       "0                              Toy Story (1995)   \n",
-       "1                                Jumanji (1995)   \n",
-       "2                       Grumpier Old Men (1995)   \n",
-       "3                      Waiting to Exhale (1995)   \n",
-       "4            Father of the Bride Part II (1995)   \n",
-       "...                                         ...   \n",
-       "9719  Black Butler: Book of the Atlantic (2017)   \n",
-       "9720               No Game No Life: Zero (2017)   \n",
-       "9721                               Flint (2017)   \n",
-       "9722        Bungo Stray Dogs: Dead Apple (2018)   \n",
-       "9723        Andrew Dice Clay: Dice Rules (1991)   \n",
+       "                                       title                       genres  \\\n",
+       "314                      Forrest Gump (1994)     Comedy|Drama|Romance|War   \n",
+       "277         Shawshank Redemption, The (1994)                  Crime|Drama   \n",
+       "257                      Pulp Fiction (1994)  Comedy|Crime|Drama|Thriller   \n",
+       "510         Silence of the Lambs, The (1991)        Crime|Horror|Thriller   \n",
+       "1938                      Matrix, The (1999)       Action|Sci-Fi|Thriller   \n",
+       "...                                      ...                          ...   \n",
+       "3053                              Cop (1988)                     Thriller   \n",
+       "3049                Born in East L.A. (1987)                       Comedy   \n",
+       "6687  City of Men (Cidade dos Homens) (2007)                        Drama   \n",
+       "3045                      Best Seller (1987)                     Thriller   \n",
+       "9723     Andrew Dice Clay: Dice Rules (1991)                       Comedy   \n",
        "\n",
-       "                                           genres  popularity  \n",
-       "0     Adventure|Animation|Children|Comedy|Fantasy         215  \n",
-       "1                      Adventure|Children|Fantasy         110  \n",
-       "2                                  Comedy|Romance          52  \n",
-       "3                            Comedy|Drama|Romance           7  \n",
-       "4                                          Comedy          49  \n",
-       "...                                           ...         ...  \n",
-       "9719              Action|Animation|Comedy|Fantasy           1  \n",
-       "9720                     Animation|Comedy|Fantasy           1  \n",
-       "9721                                        Drama           1  \n",
-       "9722                             Action|Animation           1  \n",
-       "9723                                       Comedy           1  \n",
+       "      popularity  \n",
+       "314          329  \n",
+       "277          317  \n",
+       "257          307  \n",
+       "510          279  \n",
+       "1938         278  \n",
+       "...          ...  \n",
+       "3053           1  \n",
+       "3049           1  \n",
+       "6687           1  \n",
+       "3045           1  \n",
+       "9723           1  \n",
        "\n",
        "[9724 rows x 3 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -894,15 +894,51 @@
     "        ratings_df\n",
     "        .groupby(\"movieId\")\n",
     "        .agg(popularity =(\"rating\",\"count\"))\n",
-    "        .reset_index()\n",
+    "        #.reset_index()\n",
     "    )\n",
     "    \n",
-    "    rating_info = rating_info.merge(names_df,how=\"left\")\n",
+    "    rating_info = rating_info.merge(names_df,how=\"left\",on=\"movieId\")\n",
     "    if n_top < movies_df.shape[0] :\n",
     "        rating_info =rating_info.nlargest(n_top,\"popularity\")\n",
-    "    return round(rating_info[[\"title\",\"genres\",\"popularity\"]].reset_index().drop(columns=\"index\"),3)\n",
+    "    return round(rating_info[[\"title\",\"genres\",\"popularity\"]].nlargest(n_top,\"popularity\"),3)\n",
     "    \n",
     "n_top_movies_popular()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_genres_l = movies_df.genres.str.split(\"|\").sum()\n",
+    "unique_genres_l=[]\n",
+    "for x in all_genres_l:\n",
+    "        # check if exists in unique_list or not\n",
+    "        if x not in unique_genres_l:\n",
+    "            unique_genres_l.append(x)\n",
+    "unique_genres_l.remove('(no genres listed)')\n",
+    "unique_genres_l.insert(0,\"Surprise Me!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"('Surprise Me!', 'Adventure', 'Animation', 'Children', 'Comedy', 'Fantasy', 'Romance', 'Drama', 'Action', 'Crime', 'Thriller', 'Horror', 'Mystery', 'Sci-Fi', 'War', 'Musical', 'Documentary', 'IMAX', 'Western', 'Film-Noir')\""
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str(tuple(unique_genres_l))"
    ]
   },
   {
@@ -1089,7 +1125,7 @@
     }
    ],
    "source": [
-    "def n_top_movies_weighted(n_top=movies_df.shape[0], names_df=movies_df, ratings_df=ratings_df):\n",
+    "def n_top_movies_weighted(n_top=movies_df.shape[0], names_df=movies_df, ratings_df=ratings_df, mode=\"any\"):\n",
     "    \n",
     "    rating_info=(\n",
     "        ratings_df\n",
@@ -1100,8 +1136,10 @@
     "    rating_info[\"weighted_score\"]= (rating_info.rate_count/rating_info.rate_count.sum()) *100* rating_info.rate_mean\n",
     "    \n",
     "    rating_info = rating_info.merge(names_df,how=\"left\")\n",
+    "    if mode != \"any\":\n",
+    "        rating_info.query(\"genres == @mode\")\n",
     "    if n_top < movies_df.shape[0] :\n",
-    "        rating_info =rating_info.nlargest(n_top,\"weighted_score\")\n",
+    "        rating_info = rating_info.nlargest(n_top,\"weighted_score\")\n",
     "    return round(rating_info[[\"title\",\"genres\",\"weighted_score\",\"rate_mean\",\"rate_count\"]].reset_index().drop(columns=\"index\"),3)\n",
     "    \n",
     "n_top_movies_weighted()"
