--- a/Recommenders/03_UserBased_Recommender.ipynb
+++ b/Recommenders/03_UserBased_Recommender.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -149,19 +149,19 @@
        "[9742 rows x 3 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "links_df= pd.read_csv(\"datasets\\ml-latest-small\\links.csv\")\n",
+    "links_df= pd.read_csv(\"..\\datasets\\ml-latest-small\\links.csv\")\n",
     "links_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -292,19 +292,19 @@
        "[9742 rows x 3 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "movies_df= pd.read_csv(\"datasets\\ml-latest-small\\movies.csv\")\n",
+    "movies_df= pd.read_csv(\"..\\datasets\\ml-latest-small\\movies.csv\")\n",
     "movies_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -434,14 +434,87 @@
        "[100836 rows x 4 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ratings_df= pd.read_csv(\"datasets\\ml-latest-small\\\\ratings.csv\")\n",
+    "ratings_df= pd.read_csv(\"..\\datasets\\ml-latest-small\\\\ratings.csv\")\n",
     "ratings_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "610"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ratings_df.userId.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5    6\n",
+       "Name: movieId, dtype: int64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies_df.query(\"title == 'Heat (1995)'\").movieId.value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ratings_ex_df = ratings_df.copy()\n",
+    "ratings_ex_df.append()\n",
+    "new_row = {'userId':ratings_df.userId.max()+1, 'movieId':, 'Duration':'55days', 'Discount':1800}\n",
+    "df2 = df.append(new_row, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ratings_df.groupby(\"userId\").agg(movies_count=(\"movieId\",\"count\")).movies_count.min()"
    ]
   },
   {
