enhance recommender behaviour

--- a/Recommenders/01_BasicRecommenders.ipynb
+++ b/Recommenders/01_BasicRecommenders.ipynb
@@ -1704,6 +1704,62 @@
     "    .nlargest(20,\"weighted_score\")\n",
     ")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_popularity_recommendation(names_df, ratings_df, n_top=10, mode=RANDOM_MOOD,criteria=\"weighted rate\"):\n",
+    "\n",
+    "    rating_info = (\n",
+    "        ratings_df\n",
+    "        .groupby(\"movieId\")\n",
+    "        .agg(rate_mean=(\"rating\", \"mean\"), rate_count=(\"rating\", \"count\"))\n",
+    "        .reset_index()\n",
+    "    )\n",
+    "    if criteria == \"weighted rate\":\n",
+    "        rating_info[\"weighted_score\"] = (rating_info.rate_count/rating_info.rate_count.sum()) * rating_info.rate_mean\n",
+    "        rating_info = rating_info.merge(names_df,on=\"movieId\", how=\"left\")\n",
+    "        \n",
+    "        if mode != RANDOM_MOOD:\n",
+    "            rating_info = rating_info.query(\"genres.str.contains(@mode)\")\n",
+    "            \n",
+    "        rating_info = rating_info.nlargest(n_top, \"weighted_score\")\n",
+    "        \n",
+    "    elif criteria == \"baysian average\":\n",
+    "        c = ratings_df.rating.mean()\n",
+    "        m = (\n",
+    "            ratings_df\n",
+    "            .groupby(\"movieId\")\n",
+    "            .agg(rate_count=(\"rating\",\"count\"))\n",
+    "            .reset_index()\n",
+    "        ).rate_count.quantile(0.9)\n",
+    "        \n",
+    "        rating_info=(\n",
+    "            ratings_df\n",
+    "            .groupby(\"movieId\")\n",
+    "            .agg(rate_mean =(\"rating\",\"mean\"),rate_count=(\"rating\",\"count\"))\n",
+    "            .reset_index()\n",
+    "        )\n",
+    "\n",
+    "        rating_info = rating_info.loc[rating_info.rate_count >= m]\n",
+    "        rating_info[\"rate_bayes\"] = rating_info.apply(weighted_rating, axis=1,args=(m,c))\n",
+    "        rating_info = rating_info.merge(names_df,on=\"movieId\",how=\"left\").nlargest(n_top,\"rate_bayes\")\n",
+    "        if mode != RANDOM_MOOD:\n",
+    "            rating_info = rating_info.query(\"genres.str.contains(@mode)\")\n",
+    "            print(rating_info)\n",
+    "        \n",
+    "\n",
+    "    return rating_info[[\"title\", \"genres\", \"movieId\"]].reset_index(drop=True)\n",
+    "\n",
+    "top_movies_list = get_popularity_recommendation(n_top=10*2\n",
+    "                                                , names_df=movies_df\n",
+    "                                                , ratings_df=ratings_df\n",
+    "                                                , mode=\"Comedy\"\n",
+    "                                                , criteria=\"baysian average\")"
+   ]
   }
  ],
  "metadata": {
