add bulk changes

--- a/Recommenders/01_BasicRecommenders.ipynb
+++ b/Recommenders/01_BasicRecommenders.ipynb
@@ -1704,6 +1704,145 @@
     "    .nlargest(20,\"weighted_score\")\n",
     ")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>movieId</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Pulp Fiction (1994)</td>\n",
+       "      <td>Comedy|Crime|Drama|Thriller</td>\n",
+       "      <td>296</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Princess Bride, The (1987)</td>\n",
+       "      <td>Action|Adventure|Comedy|Fantasy|Romance</td>\n",
+       "      <td>1197</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Forrest Gump (1994)</td>\n",
+       "      <td>Comedy|Drama|Romance|War</td>\n",
+       "      <td>356</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Dr. Strangelove or: How I Learned to Stop Worr...</td>\n",
+       "      <td>Comedy|War</td>\n",
+       "      <td>750</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               title  \\\n",
+       "0                                Pulp Fiction (1994)   \n",
+       "1                         Princess Bride, The (1987)   \n",
+       "2                                Forrest Gump (1994)   \n",
+       "3  Dr. Strangelove or: How I Learned to Stop Worr...   \n",
+       "\n",
+       "                                    genres  movieId  \n",
+       "0              Comedy|Crime|Drama|Thriller      296  \n",
+       "1  Action|Adventure|Comedy|Fantasy|Romance     1197  \n",
+       "2                 Comedy|Drama|Romance|War      356  \n",
+       "3                               Comedy|War      750  "
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "RANDOM_MOOD = \"Surprise Me!\"\n",
+    "\n",
+    "def weighted_rating(x, m, C):\n",
+    "    v = x['rate_count']\n",
+    "    R = x['rate_mean']\n",
+    "    return (v/(v+m) * R) + (m/(m+v) * C)\n",
+    "\n",
+    "\n",
+    "def get_popularity_recommendation(names_df, ratings_df, n_top=10, mode=RANDOM_MOOD,criteria=\"weighted rate\"):\n",
+    "\n",
+    "    rating_info = (\n",
+    "        ratings_df\n",
+    "        .groupby(\"movieId\")\n",
+    "        .agg(rate_mean=(\"rating\", \"mean\"), rate_count=(\"rating\", \"count\"))\n",
+    "        .reset_index()\n",
+    "    )\n",
+    "    if criteria == \"weighted rate\":\n",
+    "        rating_info[\"weighted_score\"] = (rating_info.rate_count/rating_info.rate_count.sum()) * rating_info.rate_mean\n",
+    "        rating_info = rating_info.merge(names_df,on=\"movieId\", how=\"left\")\n",
+    "        \n",
+    "        if mode != RANDOM_MOOD:\n",
+    "            rating_info = rating_info.query(\"genres.str.contains(@mode)\")\n",
+    "            \n",
+    "        rating_info = rating_info.nlargest(n_top, \"weighted_score\")\n",
+    "        \n",
+    "    elif criteria == \"baysian average\":\n",
+    "        c = ratings_df.rating.mean()\n",
+    "        m = (\n",
+    "            ratings_df\n",
+    "            .groupby(\"movieId\")\n",
+    "            .agg(rate_count=(\"rating\",\"count\"))\n",
+    "            .reset_index()\n",
+    "        ).rate_count.quantile(0.9)\n",
+    "        \n",
+    "        rating_info=(\n",
+    "            ratings_df\n",
+    "            .groupby(\"movieId\")\n",
+    "            .agg(rate_mean =(\"rating\",\"mean\"),rate_count=(\"rating\",\"count\"))\n",
+    "            .reset_index()\n",
+    "        )\n",
+    "\n",
+    "        rating_info = rating_info.loc[rating_info.rate_count >= m]\n",
+    "        rating_info[\"rate_bayes\"] = rating_info.apply(weighted_rating, axis=1,args=(m,c))\n",
+    "        rating_info = rating_info.merge(names_df,on=\"movieId\",how=\"left\").nlargest(n_top,\"rate_bayes\")\n",
+    "        if mode != RANDOM_MOOD:\n",
+    "            rating_info = rating_info.query(\"genres.str.contains(@mode)\")\n",
+    "        \n",
+    "\n",
+    "    return rating_info[[\"title\", \"genres\", \"movieId\"]].reset_index(drop=True)\n",
+    "\n",
+    "top_movies_list = get_popularity_recommendation(n_top=10*2\n",
+    "                                                , names_df=movies_df\n",
+    "                                                , ratings_df=ratings_df\n",
+    "                                                , mode=\"Comedy\"\n",
+    "                                                , criteria=\"baysian average\")\n",
+    "top_movies_list"
+   ]
   }
  ],
  "metadata": {
