--- a/Recommenders/03_UserBased_Recommender.ipynb
+++ b/Recommenders/03_UserBased_Recommender.ipynb
@@ -466,23 +466,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 100836 entries, 0 to 100835\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column     Non-Null Count   Dtype  \n",
+      "---  ------     --------------   -----  \n",
+      " 0   userId     100836 non-null  int64  \n",
+      " 1   movieId    100836 non-null  int64  \n",
+      " 2   rating     100836 non-null  float64\n",
+      " 3   timestamp  100836 non-null  int64  \n",
+      "dtypes: float64(1), int64(3)\n",
+      "memory usage: 3.1 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "ratings_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5    6\n",
-       "Name: movieId, dtype: int64"
+       "6"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "movies_df.query(\"title == 'Heat (1995)'\").movieId.value"
+    "movies_df.query(\"title == 'Heat (1995)'\").movieId.values[0]"
    ]
   },
   {
